@@ -184,6 +184,9 @@
 	Fixed possible hang during startup on Windows after removal of last
 	visited directory.
 
+	Fixed running background commands on Windows that require shell
+	expansions.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
